--- a/php.ini
+++ b/php.ini
@@ -386,7 +386,7 @@ max_input_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 128M
+memory_limit = 512M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -806,7 +806,7 @@ file_uploads = On
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
-upload_max_filesize = 2M
+upload_max_filesize = 64M
 
 ; Maximum number of files that can be uploaded via a single request
 max_file_uploads = 20
@@ -875,21 +875,21 @@ default_socket_timeout = 60
 ; Be sure to appropriately set the extension_dir directive.
 ;
 ;extension=php_bz2.dll
-;extension=php_curl.dll
-;extension=php_fileinfo.dll
+extension=php_curl.dll
+extension=php_fileinfo.dll
 ;extension=php_ftp.dll
-;extension=php_gd2.dll
+extension=php_gd2.dll
 ;extension=php_gettext.dll
 ;extension=php_gmp.dll
 ;extension=php_intl.dll
-;extension=php_imap.dll
+extension=php_imap.dll
 ;extension=php_interbase.dll
 ;extension=php_ldap.dll
-;extension=php_mbstring.dll
-;extension=php_exif.dll      ; Must be after mbstring as it depends on it
-;extension=php_mysqli.dll
+extension=php_mbstring.dll
+extension=php_exif.dll      ; Must be after mbstring as it depends on it
+extension=php_mysqli.dll
 ;extension=php_oci8_12c.dll  ; Use with Oracle Database 12c Instant Client
-;extension=php_openssl.dll
+extension=php_openssl.dll
 ;extension=php_pdo_firebird.dll
 ;extension=php_pdo_mysql.dll
 ;extension=php_pdo_oci.dll
@@ -904,7 +904,7 @@ default_socket_timeout = 60
 ;extension=php_snmp.dll
 
 ;extension=php_soap.dll
-;extension=php_sockets.dll
+extension=php_sockets.dll
 ;extension=php_sqlite3.dll
 ;extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
