--- a/site.conf
+++ b/site.conf
@@ -36,9 +36,9 @@ server {
 	root /var/www/html;
 
 	# Add index.php to the list if you are using PHP
-	index index.php index.html;
+	index index.html index.php;
 
-	server_name _;
+	server_name localhost;
 
 	location / {
 		# First attempt to serve request as file, then
