--- a/site.conf
+++ b/site.conf
@@ -36,14 +36,15 @@ server {
 	root /var/www/html;
 
 	# Add index.php to the list if you are using PHP
-	index index.html index.php;
+	index index.php index.html index.htm index.nginx-debian.html;
 
 	server_name localhost;
 
 	location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
+
+		try_files $uri $uri/ /index.php?$args;
 	}
 
 	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
@@ -60,9 +61,9 @@ server {
 	# deny access to .htaccess files, if Apache's document root
 	# concurs with nginx's one
 	#
-	location ~ /\.ht {
-		deny all;
-	}
+	#location ~ /\.ht {
+	#	deny all;
+	#}
 }
 
 
