--- a/www.conf
+++ b/www.conf
@@ -413,3 +413,4 @@ pm.max_spare_servers = 3
 php_admin_value[memory_limit] = 256M
 php_admin_value[upload_max_filesize] = 64M
 php_admin_value[post_max_size] = 64M
+php_admin_value[session.gc_probability] = 0
