-want to merge, but must commit first

--- a/php.ini
+++ b/php.ini
@@ -907,7 +907,7 @@ extension=php_openssl.dll
 extension=php_sockets.dll
 ;extension=php_sqlite3.dll
 ;extension=php_tidy.dll
-;extension=php_xmlrpc.dll
+extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 
 ;;;;;;;;;;;;;;;;;;;
